--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,4 +1,4 @@
-name: Latest blog post workflow
+name: ブログ更新の確認
 on:
   schedule: # Run workflow automatically
     - cron: "0 * * * *" # Runs every hour, on the hour
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   update-readme-with-blog:
-    name: "READMEの定期更新"
+    name: "READMEのブログ欄定期更新"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
